--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>AIDS_HACKBLITZ XXV</title>
+    <title>AI_HACKBLITZ XXV</title>
     <style>
       html, body {
         margin: 0;
