--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AI_HACKBLITZ XXV</title>
+    <meta name="google-site-verification" content="v2G0XWmaf9U-kT0F2KU5yAK057rvr7zqbsbiX7v5liI" />
     <style>
       html, body {
         margin: 0;
